<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/groupOne"
        android:checkableBehavior="single">
        <item
            android:id="@+id/diary"
            android:icon="@drawable/nav_diary"
            android:title="@string/time_axis" />

        <item
            android:id="@+id/note"
            android:icon="@drawable/nav_notes"
            android:title="@string/note" />

        <item
            android:id="@+id/memo"
            android:icon="@drawable/nav_table"
            android:title="@string/memo" />
    </group>

    <!-- group添加ID实现分割线 -->
    <group
        android:id="@+id/groupTwo"
        android:checkableBehavior="none">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/logout" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/nav_setting"
            android:title="@string/setting" />
    </group>
</menu>