<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/MaterialLightBlueAlpa"
        android:orientation="vertical"
        android:paddingTop="25dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:id="@+id/image"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/headPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/headphoto" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="50dp"
                android:gravity="right|center_vertical"
                android:text="@string/forget_password"
                android:textColor="@color/MaterialDarkOrigen" />

            <TextView
                android:id="@+id/register"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/forgetPassword"
                android:gravity="center"
                android:text="@string/register_text"
                android:onClick="onClick"
                android:textColor="@color/MaterialDarkOrigen" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/bg_white"
            android:focusable="true"
            android:layout_below="@+id/image"
            android:id="@+id/content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <com.din.myhjc.utils.ClearEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawableLeft="@drawable/edit_users"
                android:drawablePadding="10dp"
                android:hint="@string/user_phone_email"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/gray79" />

            <com.din.myhjc.utils.ClearEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:drawableLeft="@drawable/edit_passwords"
                android:drawablePadding="10dp"
                android:hint="@string/password_edit"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="onClick"
            android:layout_below="@+id/content"
            android:background="@drawable/bg_btn"
            android:text="@string/login"
            android:textColor="@color/MaterialWhite" />

        <com.din.myhjc.utils.TransitionView
            android:id="@+id/animalView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>
    </RelativeLayout>
</layout>
