<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/btn_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="@color/MaterialWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/MaterialWhite" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/confirm"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="right"
                android:background="@null"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/btn_confirm" />
        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll"
            android:layout_below="@+id/toolbar">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/content"
                android:lineSpacingExtra="5dp"
                android:padding="20dp"
                android:textSize="14dp" />
        </ScrollView>

        <TextView
            android:id="@+id/weather"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_above="@+id/view"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/weather"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:hint="@string/weather"
            android:padding="10dp"
            android:textColor="@color/MaterialLightBlack" />

        <TextView
            android:id="@+id/mood"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_above="@+id/view"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@+id/weather"
            android:drawableLeft="@drawable/mood"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:hint="@string/mood"
            android:padding="10dp"
            android:textColor="@color/MaterialLightBlack" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@+id/view"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/location"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/location"
            android:textColor="@color/MaterialLightBlack" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/recyclerView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_alignParentBottom="true"
            android:visibility="invisible" />
    </RelativeLayout>
</layout>