<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.dinzhenyan.myhjc.activities.AddNoteActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add"
                android:textColor="@color/MaterialWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/confirm"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="right"
                android:background="@null"
                android:foreground="?attr/selectableItemBackground"
                android:src="@drawable/btn_confirm" />
        </android.support.v7.widget.Toolbar>

        <com.din.myhjc.utils.ClearEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:maxLines="1"
            android:hint="@string/title"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/title"
            android:background="@color/MaterialLightGray" />

        <com.din.myhjc.utils.StationeryEditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/bottom"
            android:layout_below="@+id/title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="8"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/content"
            android:lineSpacingMultiplier="1.5"
            android:textSize="16dp" />

        <View
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>
</layout>
